WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195496
ParserError can be shrunk by 8 bytes
https://bugs.webkit.org/show_bug.cgi?id=195496
Summary
ParserError can be shrunk by 8 bytes
Robin Morisset
Reported
2019-03-08 17:04:48 PST
By shrinking two enums to 8 bits each.
Attachments
Patch
(1.19 KB, patch)
2019-03-08 17:06 PST
,
Robin Morisset
mark.lam
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-highsierra-wk2
(2.81 MB, application/zip)
2019-03-08 22:58 PST
,
EWS Watchlist
no flags
Details
Patch
(1.22 KB, patch)
2019-03-11 10:14 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2019-03-08 17:06:07 PST
Created
attachment 364092
[details]
Patch
EWS Watchlist
Comment 2
2019-03-08 22:58:47 PST
Comment on
attachment 364092
[details]
Patch
Attachment 364092
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/11436310
New failing tests: imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-constructor.html accessibility/mac/selection-notification-focus-change.html
EWS Watchlist
Comment 3
2019-03-08 22:58:48 PST
Created
attachment 364118
[details]
Archive of layout-test-results from ews106 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Robin Morisset
Comment 4
2019-03-11 10:14:49 PDT
Created
attachment 364266
[details]
Patch Same patch, to verify that the bots were just flaky.
WebKit Commit Bot
Comment 5
2019-03-17 16:45:29 PDT
Comment on
attachment 364266
[details]
Patch Clearing flags on attachment: 364266 Committed
r243053
: <
https://trac.webkit.org/changeset/243053
>
WebKit Commit Bot
Comment 6
2019-03-17 16:45:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-03-17 16:51:39 PDT
<
rdar://problem/48966087
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug