ParserError can be shrunk by 8 bytes https://bugs.webkit.org/show_bug.cgi?id=195496

Reviewed by Mark Lam.

* parser/ParserError.h:


Canonical link: https://commits.webkit.org/210136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243053 268f45cc-cd09-0410-ab3c-d52691b4dbfc